# fastapi_intro

./: pyproject.toml
fast_zero/: app.py  models.py
migrations/versions/: 105c47fbdf3c_create_user_table.py  e6579575a019_add_updated_at_at_user_table.py
tests/: conftest.py  test_app.py  test_db.py
